--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,10 @@ fieldset {
     margin: 0;
     border: none;
 }
+figure{
+    padding: 0;
+    margin: 0;
+}
 
 label {
     cursor: pointer;
@@ -65,49 +69,80 @@ strong {
 /* ==================================================
    TYPOGRAPHY & STRUCTURE
    ================================================== */
-    body, button, input, textarea{
-        font-family: 'Open Sans', sans-serif;
-        line-height: 1;
+body, button, input, textarea{
+    font-family: 'Open Sans', sans-serif;
+    line-height: 1;
+}
+body{
+    font-size: 1.4em;
+}
+h1{
+    padding: 0;
+    margin: 0;
+    font-size: 3.143em;
+}
+h2{
+    font-size: 5.143em;
+    font-weight: 300;
+    text-align: center;
+}
+    h2 span{
+        position: relative;
     }
-    body{
-        font-size: 1.4em;
-    }
-    h1{
-        padding: 0;
-        margin: 0;
-        font-size: 3.143em;
-    }
-    h2{
-        font-size: 5.143em;
-        font-weight: 300;
-        text-align: center;
-    }
-        h2 span{
-            position: relative;
-        }
-        h2 span:before{
-            content: "";
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            display: block;
-            width: 100%;
-            height: 2px;
-            background-color: #000;
-        }
-    .layout-wrapper-center{
-        width: 1170px;
-        margin: 0 auto;
-    }
-    .clear:after{
+    h2 span:before{
         content: "";
-        display: table;
-        clear: both;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        display: block;
+        width: 100%;
+        height: 2px;
+        background-color: #000;
     }
+h3{
+    font-size: 2.571em;
+    font-family: 'Marvel', sans-serif;
+    text-align: center;
+}
+p{
+    color: #727070;
+    line-height: 1.8em;
+}
+a{
+    color: #727070;
+    transition: all .3s ease;
+}
+    a:hover{
+        text-decoration: none;
+        color: #d94d3a;
+    }
+.layout-wrapper-center{
+    width: 1170px;
+    margin: 0 auto;
+}
+.clear:after{
+    content: "";
+    display: table;
+    clear: both;
+}
 /* ==================================================
    BUTTONS
    ================================================== */
-
+.btn{
+    display: inline-block;
+    padding: 10px 0;
+    border: 1px solid #000;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 1.714em;
+    color: #000;
+    background-color: #fff;
+    text-decoration: none;
+}
+    .btn:hover{
+        background-color: #000;
+        color: #fff;
+    }
 
 /* ==================================================
    HEADER
@@ -293,7 +328,85 @@ strong {
 
 /* SECTION
 -----------*/
-.section{
-    padding-top: 50px;
+.content-section {
+    padding: 50px 0 100px;
     background-color: #fdfdfe;
 }
+.content-section:last-child{
+    border-top: 1px solid #000;
+}
+    .content-section h3 a{
+        color: #000;
+        text-decoration: none;
+    }
+        .content-section h3 a:hover{
+            color: #d94d3a;
+        }
+
+/* sections with parallax  */
+.transparent{
+    background: url("../pict/parallax.jpg");
+    color: #fff;
+}
+    .transparent h2 span:before{/* color of the line under heading */
+        background-color: #fff;
+    }
+
+/* WELCOME */
+.welcome .layout-wrapper-center{
+    width: 782px;
+}
+    .welcome{
+        text-align: center;
+    }
+    .welcome .btn{
+        width: 278px;
+        margin-top: 30px;
+    }
+
+/* SERVICES */
+.services-nav{
+    padding: 0;
+    margin: 0 auto;
+    font-family: 'Marvel', sans-serif;
+    font-size: 3.571em;
+    text-align: center;
+}
+    .services-nav-item{
+        display: inline-block;
+        min-width: 370px;
+        padding: 50px 0;
+        list-style: none;
+        vertical-align: middle;
+        text-align: center;
+    }
+        .services-nav-item-link{
+            color: #fff;
+            text-decoration: none;
+        }
+
+/* PROJECTS */
+.projects-list{
+    position: relative; /* for prev & next buttons */
+    padding: 30px 0 0 0;
+    margin: 0;
+    text-align: center;
+}
+.projects-list:before{
+
+}
+    .projects-list-item{
+        list-style: none;
+        display: inline-block;
+        margin-right: 25px;
+        vertical-align: middle;
+    }
+    .projects-list-item:last-child{
+        margin-right: 0;
+    }
+    .projects-title{
+        margin-top: 15px;
+        color: #000;
+        font-family: 'Marvel', sans-serif;
+        font-size: 2.571em;
+    }
